feat:register user

--- a/public/assets/css/font.css
+++ b/public/assets/css/font.css
@@ -1,5 +1,5 @@
 /* Regular Weights */
-.nunito-200 {
+.nunito {
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
   font-weight: 200;
